# superconductivity_predictor

./: .gitignore  Dockerfile  Dockerfile.sagemaker  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  mlflow.db  payload.json  prefect.yaml  pyproject.toml  response.json
.dvc/: config
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
configs/: experiment_v1.yaml
dash/: app.py  requirements.txt
data/: drifted_test.csv  subtle_drift_test.csv
docker/: sagemaker_serve.py  serve
docs/: DESIGN.md
infra/: README.md
infra/terraform/environments/dev/: .terraform.lock.hcl  main.tf
infra/terraform/environments/prod/: main.tf
infra/terraform/modules/ecr/: main.tf
infra/terraform/modules/iam/: main.tf
infra/terraform/modules/s3/: main.tf
infra/terraform/modules/sagemaker/: main.tf
models/: best_model_top15.pkl  data_manifest.json  feature_medians.json  model_metadata.json  top_features.json
scripts/: __init__.py  download_data.py  package_sagemaker.py  run_flow.py  run_pipeline.py
src/api/: app.py
src/api/sagemaker/: __init__.py  inference.py
src/data/: __init__.py  loader.py
src/evaluation/: __init__.py  evaluator.py
src/features/: __init__.py  engineer.py
src/models/: __init__.py  trainer.py
src/monitoring/: __init__.py  drift.py  logger.py
src/orchestration/: __init__.py  flows.py
src/storage/: __init__.py  store.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_evaluator.py  test_features.py  test_flows.py  test_loader.py  test_monitoring.py  test_sagemaker_inference.py  test_storage.py  test_trainer.py
